fix: add correct bem classnames according to rule 2.1

--- a/style.css
+++ b/style.css
@@ -117,12 +117,14 @@ li > label {
 li >    input[type="text"] {
   width: 226px
 }
-button.delete img {
+.incomplete-list__image,
+.completed-list__image {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.completed-list__image,
+.incomplete-list__image{
   transform: rotateZ(0);
 }
 
