fix: add unified id for lists according to rule 3.1

--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@
 }
 
 /* Completed */
-#complete-task .task-list__label {
+#task-list__completed .task-list__label {
   text-decoration: line-through;
   color: #888;
 }
