fix: change edit mode modifier according to extended rule 2.1

--- a/style.css
+++ b/style.css
@@ -187,11 +187,11 @@
   display: none;
 }
 
-.edit-mode .task-list__input {
+.task-list__item_edit-mode .task-list__input {
   display: inline-block;
   width: 224px;
 }
 
-.edit-mode .task-list__label {
+.task-list__item_edit-mode .task-list__label {
   display: none;
 }
