fix: add correct id for lists according to extended rule 2.1

--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@
 
 /* Completed */
 
-#task-list__completed .task-list__label {
+#task-list_completed .task-list__label {
   text-decoration: line-through;
   color: #888;
 }
